fix: preserve TargetWorkingTrees close insertion order.
Map.copyOf does not keep LinkedHashMap encounter order; store an unmodifiable LinkedHashMap so cleanup stays deterministic and continues after a failed close.

Co-authored-by: Cursor <cursoragent@cursor.com>